
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "otth_mini_png"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[dependencies.oxipng]
version = "10.1"
default-features = false
features = ["parallel","zopfli"]

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
